Edit search by title api